deployments/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./compose/docker-compose.yaml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./compose/docker-compose.yaml
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: auth-service
    spec:
      containers:
        - env:
            - name: AUTH_HOST
              value: auth-service
            - name: AUTH_HTTP_PORT
              value: "8080"
            - name: AUTH_PORT
              value: "50050"
            - name: HOST
              value: 0.0.0.0
            - name: JWT_ACCESS_SECRET
              value: your_access_secret
            - name: JWT_REFRESH_SECRET
              value: your_refresh_secret
            - name: LOG_LEVEL
              value: info
          image: auth-service:latest
          imagePullPolicy: Never
          name: auth-service
          ports:
            - containerPort: 50050
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
