deployments/cart-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: cart-service
  name: cart-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cart-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: cart-service
    spec:
      containers:
        - env:
            - name: CART_HOST
              value: cart-service
            - name: CART_HTTP_PORT
              value: "8083"
            - name: CART_PORT
              value: "50053"
            - name: HOST
              value: 0.0.0.0
            - name: JWT_ACCESS_SECRET
              value: your_access_secret
            - name: JWT_REFRESH_SECRET
              value: your_refresh_secret
            - name: LOG_LEVEL
              value: info
            - name: REDIS_HOST
              value: redis
            - name: REDIS_NUMBER
              value: "0"
            - name: REDIS_PASSWORD
              value: ""
            - name: REDIS_PORT
              value: "6379"
          image: cart-service:latest
          imagePullPolicy: Never
          name: cart-service
          ports:
            - containerPort: 50053
              protocol: TCP
            - containerPort: 8083
              protocol: TCP
      restartPolicy: Always
