deployments/node-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: node-exporter
  name: node-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node-exporter
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: node-exporter
    spec:
      containers:
        - image: prom/node-exporter:latest
          name: node-exporter
          ports:
            - containerPort: 9100
              protocol: TCP
      restartPolicy: Always
