deployments/product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: product-service
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: product-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: product-service
    spec:
      containers:
        - env:
            - name: HOST
              value: 0.0.0.0
            - name: JWT_ACCESS_SECRET
              value: your_access_secret
            - name: JWT_REFRESH_SECRET
              value: your_refresh_secret
            - name: LOG_LEVEL
              value: info
            - name: MONGO_DB_NAME
              value: wearstore
            - name: MONGO_HOST
              value: mongo
            - name: MONGO_PASSWORD
              value: admin
            - name: MONGO_PORT
              value: "27017"
            - name: MONGO_USER
              value: mongo
            - name: PRODUCT_HOST
              value: product-service
            - name: PRODUCT_HTTP_PORT
              value: "8082"
            - name: PRODUCT_PORT
              value: "50052"
          image: product-service:latest
          imagePullPolicy: Never
          name: product-service
          ports:
            - containerPort: 50052
              protocol: TCP
            - containerPort: 8082
              protocol: TCP
      restartPolicy: Always
