deployments/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: user-service
    spec:
      containers:
        - env:
            - name: HOST
              value: 0.0.0.0
            - name: JWT_ACCESS_SECRET
              value: your_access_secret
            - name: JWT_REFRESH_SECRET
              value: your_refresh_secret
            - name: LOG_LEVEL
              value: info
            - name: USER_DB_HOST
              value: postgres
            - name: USER_DB_NAME
              value: userdb
            - name: USER_DB_PASSWORD
              value: "1234"
            - name: USER_DB_PORT
              value: "5432"
            - name: USER_DB_USER
              value: admin
            - name: USER_HOST
              value: user-service
            - name: USER_HTTP_PORT
              value: "8081"
            - name: USER_PORT
              value: "50051"
          image: user-service:latest
          imagePullPolicy: Never
          name: user-service
          ports:
            - containerPort: 50051
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
