deployments/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./compose/docker-compose.yaml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  ports:
    - name: "50051"
      port: 50051
      targetPort: 50051
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: auth-service
