deployments/product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./compose/docker-compose.yaml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: product-service
  name: product-service
spec:
  ports:
    - name: "50052"
      port: 50052
      targetPort: 50052
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: product-service
