deployments/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  ports:
    - name: "50051"
      port: 50051
      targetPort: 50051
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: user-service
